chore: fix z-index mobile navbar and text content

--- a/src/index.scss
+++ b/src/index.scss
@@ -179,6 +179,7 @@
   width: 100%;
   height: 100%;
   padding: functions.space(5);
+  z-index: 2;
   transform: translate3d(0, -100vh, 0);
   transition: transform 800ms cubic-bezier(0.215, 0.61, 0.355, 1);
 
